--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aastha Patel's Portfolio</title>
 
-        <body>
-         <header>
-             <div class="logo">
-             </div>
-             <button class="nav toggle" aria-label="toggle navigation">
-                 <span class="hamburger"></span>
-             </button>
-             <nav class="nav">
-                 <ul class="nav__list">
-                <li class="nav__item"><a href="#"> class="nav__link"Home</a></li>
-                <li class="nav__item"><a href="#"> class="nav__link"My Services</a></li>
-                <li class="nav__item"><a href="#"> class="nav__link"About Me</a></li>
-                <li class="nav__item"><a href="#"> class="nav__link"My Work</a></li>
-               </ul> 
-            </nav>
-         </header>
-        </body>   
-    </head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Aastha Patel's Portfolio</title>
+</head>
+
+<body>
+    <header>
+            <!-- <ul>
+                <li><a href="#">Home</a></li>
+                <li>
+                    <a href="#">My Services</a>
+                </li>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li ><a href="#">My Work</a></li>
+            </ul> -->
+    </header>
+
+    <div class="intro">
+        <p>This is my website.</p>
+    </div>
+
+    <div class="interests">
+        <p>Here are my interests.</p>
+    </div>
+</body>
+
 </html>
