Added divs to interests

--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
     </div>
 
     <div class="interests">
-        <p>Here are my interests.</p>
+        <p>My Interests</p>
+        <div class="roblox">
+            <p> I enjoy playing roblox as well as making games on the platform.</p>
+        </div>
+        <div class="art">
+            <p> I like to create different types of art, which include painting and crafts.</p>
+        </div>
+        <div class="videos">
+        <p> I like to make different videos and watch videos as well.</p>
     </div>
+</div>
 </body>
 
 </html>
