Added roblox image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <div class="interests">
         <p>My Interests</p>
         <div class="roblox">
-            <p> I enjoy playing roblox as well as making games on the platform.</p>
+            <p> I enjoy playing roblox as well as making games on the platform. 
+                One of my games has gotten 70k visits. I am currently working on 
+                more games. </p>
+                <img src="images/sunny.png" width="533" height="300">
+
         </div>
         <div class="art">
             <p> I like to create different types of art, which include painting and crafts.</p>
