Added Name Header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="intro">
-        <p>This is my website.</p>
+        <h1>Aastha Patel</h1>
     </div>
 
     <div class="interests">
