Added navbar and jumbotrons

--- a/index.html
+++ b/index.html
@@ -2,43 +2,45 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Aastha Patel's Portfolio</title>
 </head>
+<header>
+    <!-- As a heading -->
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <span class="navbar-brand mb-0 h1">Aastha Patel</span>
+    </nav>
+</header>
 
 <body>
-    <header>
-            <!-- <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">My Services</a>
-                </li>
-                <li>
-                    <a href="#">About Me</a>
-                </li>
-                <li ><a href="#">My Work</a></li>
-            </ul> -->
-    </header>
 
     <div class="intro">
-        <h1>Aastha Patel</h1>
     </div>
 
     <div class="interests">
-        <p>My Interests</p>
+        <h1>My Interests</h1>
         <div class="roblox">
-            <p> I enjoy playing roblox as well as making games on the platform. 
-                One of my games has gotten 70k visits. I am currently working on 
-                more games. </p>
-                <img src="images/sunny.png" width="533" height="300">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h3>Roblox</h3>
+                    <p> I enjoy playing roblox as well as making games on the platform.
+                        One of my games has gotten 70k visits. I am currently working on
+                        more games. </p>
+                    <img src="images/sunny.png" width="533" height="300">
+                </div>
+            </div>
+
+
 
         </div>
         <div class="art">
             <p> I like to create different types of art, which include painting and crafts.</p>
         </div>
         <div class="videos">
-        <p> I like to make different videos and watch videos as well.</p>
+            <p> I like to make different videos and watch videos as well.</p>
+        </div>
     </div>
-</div>
 </body>
 
 </html>
