Changed website to roblox theme

--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
     </div>
 
     <div class="interests">
-        <h1>My Interests</h1>
+        <h1>Roblox</h1>
         <div class="roblox">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <h3>Roblox</h3>
                     <p> I enjoy playing roblox as well as making games on the platform.
                         One of my games has gotten 70k visits. I am currently working on
                         more games. </p>
-                    <img src="images/sunny.png" width="533" height="300">
+                    
                 </div>
             </div>
 
 
 
         </div>
-        <div class="art">
-            <p> I like to create different types of art, which include painting and crafts.</p>
-        </div>
-        <div class="videos">
-            <p> I like to make different videos and watch videos as well.</p>
+        <div class="GFX">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <p> I like to make roblox GFX and clothing. </p>
+                    <img src="images/sunny.png" width="533" height="300">
+                    <p> Here is an example of my GFX. </p>
+        
         </div>
     </div>
 </body>
